--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,7 @@ buildscript {
 
 apply plugin: 'kotlin'
 apply plugin: 'org.springframework.boot'
+apply plugin: 'idea'
 
 jar {
 	baseName = 'golapi'
@@ -23,6 +24,7 @@ sourceCompatibility = 1.8
 targetCompatibility = 1.8
 
 repositories {
+	mavenLocal()
 	mavenCentral()
 }
 
@@ -31,6 +33,7 @@ dependencies {
 	compile("org.jetbrains.kotlin:kotlin-stdlib:${kotlinVersion}")
     compile("org.springframework.boot:spring-boot-starter-web")
     compile('com.h2database:h2')
+    compile('org.metapolis:gol:0.0.1')
 }
 sourceSets {
     main.java.srcDirs += 'src/main/kotlin'
